--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="col-md-4 cadastrar">
                 <button id="btn-voltar" onclick="voltar()" class="voltar btn btn-dark">Voltar</button>
-                <h1>Cadastrar</h1>
+                <h2>Cadastrar</h2>
                 <form action="/contato" method="POST">
                     <label for="">Nome</label>
                     <input name="nome" type="text" class="form-group">
@@ -35,17 +35,21 @@
             </div>
             <div class="col-md-4 deletar">
                 <button id="btn-voltar" onclick="voltar()" class="voltar btn btn-dark">Voltar</button>
-                <h1>Deletar</h1>
+                <h2>Deletar</h2>
                 <label for="">ID</label>
                 <input id="id" name="id" type="text" class="form-group">
                 <button class="btn btn-dark" onclick="deletar()">Deletar</button>
             </div>
             <div class="col-md-4 buscar">
                 <button id="btn-voltar" onclick="voltar()" class="voltar btn btn-dark">Voltar</button>
-                <h1>Buscar</h1>
+                <h2>Buscar</h2>
                 <div class="container-fluid">
-                    <input type="text" class="form-group">
-                    <button id="btn-search" class="btn btn-dark"><i class="bi bi-search"></i></button>
+                    <div class="row">
+                        <div class="col">
+                            <input type="text" class="form-group">
+                            <button id="btn-search" class="btn btn-dark"><i class="bi bi-search"></i></button>
+                        </div>
+                    </div>
                 </div>
                 <table class="table resultados">
                     <thead class="thead-dark">
@@ -65,7 +69,7 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script>
-        $(document).ready(function(){
+        $(document).ready(function () {
             voltar()
         })
         function deletar() {
