--- a/static/styles.css
+++ b/static/styles.css
@@ -1,20 +1,40 @@
-button{
+button {
     margin-top: 5px;
     width: 200px;
     height: 35px;
 }
 
-input{
+.busca button {
+    margin-top: 0px;
+}
+
+input {
     width: 200px;
     height: 35px;
 }
 
-label{
+label {
     width: 100px;
 }
 
-#btn-search{
+#btn-search {
     margin-top: 0px;
     width: 50px;
-    height: 40px;
+    height: 35px;
+    padding: 0px;
+}
+
+i {
+    margin: 0px;
+    padding: 0px;
+}
+
+table th {
+    width: 400px;
+}
+
+table tr td button {
+    width: 50px;
+    margin-top: 0px;
+    padding: 0px;
 }
