--- a/templates/index.html
+++ b/templates/index.html
@@ -11,104 +11,81 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 
 <body>
-    <div class="container-fluid container-form">
+    <div class="container container-form">
         <div class="row row justify-content-md-center">
             <div class="col-md-4 opcoes">
                 <button id="btn-buscar" onclick="menuBuscar()" class="btn btn-primary">Buscar</button>
                 <button id="btn-cadastrar" onclick="menuCadastrar()" class="btn btn-primary">Cadastrar</button>
-                <button id="btn-deletar" onclick="menuDeletar()" class="btn btn-primary">Deletar</button>
             </div>
             <div class="col-md-4 cadastrar">
-                <button id="btn-voltar" onclick="voltar()" class="voltar btn btn-dark">Voltar</button>
+                <button id="btn-voltar" onclick="voltar()" class="voltar btn btn-dark"><i class="bi bi-arrow-left-square"> </i>Voltar</button>
                 <h2>Cadastrar</h2>
-                <form action="/contato" method="POST">
-                    <label for="">Nome</label>
-                    <input name="nome" type="text" class="form-group">
-                    <label for="">Empresa</label>
-                    <input name="empresa" type="text" class="form-group">
-                    <label for="">Telefone</label>
-                    <input name="telefone" type="tel" class="form-group">
-                    <label for="">Email</label>
-                    <input name="email" type="email" class="form-group">
-                </form>
-                <button id="btn-enviar" class="btn btn-dark">Cadastrar</button>
+                <label for="">Nome</label>
+                <input id="nome" type="text" class="form-group">
+                <label for="">Empresa</label>
+                <input id="empresa" type="text" class="form-group">
+                <label for="">Telefone</label>
+                <input id="telefone" type="tel" class="form-group">
+                <label for="">Email</label>
+                <input id="email" type="email" class="form-group">
+                <button id="btn-enviar" onclick="cadastrar()" class="btn btn-dark"><i class="bi bi-plus-circle"> </i>Cadastrar</button>
             </div>
-            <div class="col-md-4 deletar">
-                <button id="btn-voltar" onclick="voltar()" class="voltar btn btn-dark">Voltar</button>
-                <h2>Deletar</h2>
-                <label for="">ID</label>
-                <input id="id" name="id" type="text" class="form-group">
-                <button class="btn btn-dark" onclick="deletar()">Deletar</button>
+            <div class="col-md-4 editar">
+                <button id="btn-voltar" onclick="voltar()" class="voltar btn btn-dark"><i class="bi bi-arrow-left-square"> </i>Voltar</button>
+                <h2>Editar</h2>
+                <label for="">Nome</label>
+                <input id="editar-nome" type="text" class="form-group">
+                <label for="">Empresa</label>
+                <input id="editar-empresa" type="text" class="form-group">
+                <label for="">Telefone</label>
+                <input id="editar-telefone" type="tel" class="form-group">
+                <label for="">Email</label>
+                <input id="editar-email" type="email" class="form-group">
+                <div class="btn-editar"></div>
             </div>
-            <div class="col-md-4 buscar">
-                <button id="btn-voltar" onclick="voltar()" class="voltar btn btn-dark">Voltar</button>
+            <div class="col-md-10 buscar">
+                <button id="btn-voltar" onclick="voltar()" class="btn btn-dark"><i class="bi bi-arrow-left-square"> </i>Voltar</button>
                 <h2>Buscar</h2>
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col">
-                            <input type="text" class="form-group">
-                            <button id="btn-search" class="btn btn-dark"><i class="bi bi-search"></i></button>
+                        <div class="col busca">
+                            <input id="params-busca" oninput="buscar()" type="text" class="form-group">
+                            <button id="btn-search" onclick="buscar()" class="btn btn-dark"><i
+                                    class="bi bi-search"></i></button>
+                            <button onclick="todosContatos()" class="btn btn-dark"><i class="bi bi-card-list"> </i>Todos os registros</button>
                         </div>
                     </div>
                 </div>
-                <table class="table resultados">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th>Oi</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Ola</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col">
+                            <div class="mensagem">
+
+                            </div>
+                            <table class="table table-hover resultados">
+                                <thead class="">
+                                    <tr>
+                                        <th>Nome</th>
+                                        <th>Telefone</th>
+                                        <th>Empresa</th>
+                                        <th>Email</th>
+                                        <th></th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody class="linhas">
+
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <script>
-        $(document).ready(function () {
-            voltar()
-        })
-        function deletar() {
-            $.ajax({
-                url: "/contato",
-                type: 'DELETE',
-                success: function (result) {
-                    // Do something with the result
-                }
-            });
-        }
-        function voltar() {
-            $(".opcoes").css("display", "block");
-            $(".deletar").css("display", "none");
-            $(".cadastrar").css("display", "none");
-            $(".buscar").css("display", "none")
-        }
-        function menuCadastrar() {
-            $(".opcoes").css("display", "none");
-            $(".deletar").css("display", "none");
-            $(".cadastrar").css("display", "block");
-            $(".buscar").css("display", "none")
-        }
-        function menuBuscar() {
-            $(".opcoes").css("display", "none");
-            $(".deletar").css("display", "none");
-            $(".cadastrar").css("display", "none");
-            $(".buscar").css("display", "block");
-            $(".resultados").css("display", "none")
-
-        }
-        function menuDeletar() {
-            $(".opcoes").css("display", "none");
-            $(".deletar").css("display", "block");
-            $(".cadastrar").css("display", "none");
-            $(".buscar").css("display", "none")
-
-        }
-    </script>
+    <script src="{{ url_for('static', filename='scripts.js') }}"></script>
 </body>
 
 </html>
